src/objects/zqu__QuoteProductFeature__c.object
<CustomObject>
    <fields>
        <fullName>zqu__ChargeGroupId__c</fullName>
        <label>ChargeGroupId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__FeatureName__c</fullName>
        <label>Feature Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__FeatureZuoraIdFormula__c</fullName>
        <formula>zqu__ZFeature__r.zqu__ZuoraId__c</formula>
        <label>FeatureZuoraIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__FeatureZuoraId__c</fullName>
        <label>FeatureZuoraId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanZuoraIdFormula__c</fullName>
        <formula>zqu__ProductRatePlan__r.zqu__ZuoraId__c</formula>
        <label>ProductRatePlanZuoraIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanZuoraId__c</fullName>
        <label>ProductRatePlanZuoraId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan</label>
        <referenceTo>zqu__ProductRatePlan__c</referenceTo>
        <relationshipLabel>Quote Product Features</relationshipLabel>
        <relationshipName>Quote_Product_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ProductZuoraIdFormula__c</fullName>
        <formula>zqu__Product__r.zqu__ZuoraId__c</formula>
        <label>ProductZuoraIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ProductZuoraId__c</fullName>
        <label>ProductZuoraId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quote Product Features</relationshipLabel>
        <relationshipName>Quote_Product_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteProductFeatureFullName__c</fullName>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteRatePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Rate Plan</label>
        <referenceTo>zqu__QuoteRatePlan__c</referenceTo>
        <relationshipLabel>Quote Product Features</relationshipLabel>
        <relationshipName>Quote_Product_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Quote Product Features</relationshipLabel>
        <relationshipName>Quote_Product_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionProductFeatureId__c</fullName>
        <label>SubscriptionProductFeatureId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZFeature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ZFeature</label>
        <referenceTo>zqu__ZFeature__c</referenceTo>
        <relationshipLabel>Quote Product Features</relationshipLabel>
        <relationshipName>Quote_Product_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ZProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ZProduct</label>
        <referenceTo>zqu__ZProduct__c</referenceTo>
        <relationshipLabel>Quote Product Features</relationshipLabel>
        <relationshipName>Quote_Product_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Quote Product Feature</label>
    <nameField>
        <label>Quote Product Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Product Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>